...
                              ),
                              label: Column(
                                mainAxisSize: MainAxisSize.min,
                                children: [
                                  Text(
                                    switch (bookProgressState) {
                                      BookProgressState.notStarted => 'Start Listening',
                                      BookProgressState.inProgress =>
                                        'Continue Listening',
                                      BookProgressState.complete => 'Listen Again',
                                    },
                                    style: const TextStyle(
                                      fontSize: 16,
                                      fontWeight: FontWeight.w600,
                                    ),
                                  ),
...
